# Peg_Solitaire-CLI-chinese

./: CMakeLists.txt  LICENSE  config.h.in
docs/: How_to_play.txt
src/: main.cpp
src/board/: Hole.cpp  Hole.h  board.cpp  board.h
src/other_functions/: other_functions.cpp  other_functions.h
